--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "express": "^5.1.0",
     "install": "^0.13.0",
+    "lottie-web": "^5.13.0",
+    "ngx-lottie": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
